    * Dots in requests path are now replaced by underscores  - ticket #87 (Remi)
    * Improved WSGI support and added example (seems to work OK) (Peter, Remi)
	* Added DecodingFilter (Remi)
	* Added form module (port from CP1 Form.cpy) (Remi)

2004/12-29:
    * CherryPY-2.0-beta released
    * xmlrpcfilter added (Remco)
    * cpg.response.body is now always an iterable type - ticket #59 (Carlos)
    * Allowed default session functions to be accessed by other modules - ticket #56 (Remi)
    * Added cpg.threadData - ticket #53 (Remi)
    * Added request.requestLine - ticket #52 (Remi)
    * logFile config option is now honored - ticket #51 (Remi)
    * Added cpg.request.remoteAddr and cpg.request.remoteHost - ticket #34 (Eurleif) 
    * Improved baseurlfilter to handle x-forwarded-host - ticket #49 (Kender)
    * Made object mapping algorithm iterative instead of recursive - ticket #48 (Jesir Vargas)
    * Improved testing framework (Remco)
    * Check that response is a string *after* filters have been applied (ticket #28) (Remi)
    * Removed all XML-RPC references from the core: it is now a filter (ticket #30) (Remi)
    * Removed "response encoding" from the core: it is now in a filter (ticket #31) (Remi)
    * Implemented filters and a couple of sample filters (Remi)
    * Fixed "cleanUpOldSessions" bug (ticket #12) (Remi)
    * "file" storage type for sessions now works fine (Remi)
    * Ticket #6: If a response is unicode, it gets encoded automatically. Encoding is specified in the config file unser [server].encoding (the default is UTF-8). (Remi)
    * Added more unittest (Remi)
    * Fixed file upload bug (Remi)

2004/10/13:
    * First alpha release of CherryPy-2 (Remi)
